[package]
name = "gtmpl_value"
version = "0.3.3"
authors = ["Florian Merz <flomerz@gmail.com>"]
description = "Internal Value Format for gtmpl-rust"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl_value"
documentation = "https://docs.rs/crate/gtmpl_value"
keywords = ["gtmpl-rust", "gtmpl", "golang", "template", "templating"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "fiji-flo/gtmpl_value" }