[package]
name = "gtmpl_value"
version = "0.5.1"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
description = "Internal value format for gtmpl-rust"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl_value"
documentation = "https://docs.rs/crate/gtmpl_value"
keywords = ["gtmpl-rust", "gtmpl", "golang", "template", "templating"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
anyhow = "1"
thiserror = "1"
